--- a/web/less/header.less
+++ b/web/less/header.less
@@ -159,6 +159,8 @@ header#main {
     visibility: hidden;
     text-align: center;
     white-space: nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
     margin: 0 auto;
     width: @title-width;
     top: 0px;
